@@ -1,5 +1,5 @@
 .\" -*- nroff -*-
-.\" Copyright © 2012 inria.  All rights reserved.
+.\" Copyright © 2013 inria.  All rights reserved.
 .\" See COPYING in top-level directory.
 .TH HWLOC-ANNOTATE "1" "#HWLOC_DATE#" "#PACKAGE_VERSION#" "#PACKAGE_NAME#"
 .SH NAME
@@ -106,5 +106,5 @@ hwloc-annotate will return nonzero if any kind of error occurs, such as
 .SH SEE ALSO
 .
 .ft R
-hwloc(7), lstopo(1)
+hwloc(7), lstopo(1), hwloc-info(1)
 .sp
