@@ -427,5 +427,5 @@ To count the number of logical processors in the system
 .SH SEE ALSO
 .
 .ft R
-hwloc-bind(1), hwloc-ps(1), hwloc-gather-topology(1)
+hwloc-info(1), hwloc-bind(1), hwloc-ps(1), hwloc-gather-topology(1)
 .sp
